eks_manifest/portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: 249746593559.dkr.ecr.ap-south-1.amazonaws.com/mobile_app/portfolio 
          ports:
            - containerPort: 3000
