eks_manifest/kyc_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyc-service
spec:
  type: ClusterIP
  selector:
    app: kyc
  ports:
    - port: 80
      targetPort: 3000
