eks_manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /kyc
            pathType: Prefix
            backend:
              service:
                name: kyc-service
                port:
                  number: 80
          - path: /portfolio
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
